[package]
name = "bp"
version = "0.1.0"
authors = ["Tommy Thorn <tommy-github2@thorn.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
format_num = "*"
crossbeam = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
